<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    
    <data>
        <variable
            name="handler"
            type="com.example.w_mvvm_databinding.ui.StartFragment" />

        <import type="android.view.View"/>
        <variable
            name="mainHandler"
            type="com.example.w_mvvm_databinding.ui.MainActivity" />
    </data>

    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.StartFragment">


        <ImageView
            android:id="@+id/imgLogo"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtDescription"
            android:text="@string/s_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/btnLogin"
            android:text="@string/s_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintVertical_bias="0.8"
            android:onClick="@{(v) -> handler.onclick(v)}"
            android:layout_height="wrap_content"/>


        <Button
            android:id="@+id/btnRegister"
            android:text="@string/s_register"
            android:onClick="@{(v) -> handler.onclick(v)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintVertical_bias="0.9"
            android:layout_height="wrap_content"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
